Added another 2 videos, will need to add a function to calculate total audio duration

--- a/wav_youtube/video_config.json
+++ b/wav_youtube/video_config.json
@@ -7,6 +7,8 @@
         {"speaker": "MCDM","id": "NwJxM1ABLJM", "complete": "true"},
         {"speaker": "MCDM","id": "jPZZAavOugo", "complete": "true"}, 
         {"speaker": "MCDM","id": "ZtFfq_yQQR4", "complete": "true"},
-        {"speaker": "MCDM","id": "I-nfsi6B8d4", "complete": "true"}
+        {"speaker": "MCDM","id": "I-nfsi6B8d4", "complete": "true"},
+        {"speaker": "MCDM","id": "aO0HMmrZ4xs", "complete": "true"},
+        {"speaker": "MCDM","id": "8Q8bVPpc84A", "complete": "true"}
     ]
 }
