Added ability to train after importing new audio

--- a/wav_youtube/video_config.json
+++ b/wav_youtube/video_config.json
@@ -9,6 +9,10 @@
         {"speaker": "MCDM","id": "ZtFfq_yQQR4", "complete": "true"},
         {"speaker": "MCDM","id": "I-nfsi6B8d4", "complete": "true"},
         {"speaker": "MCDM","id": "aO0HMmrZ4xs", "complete": "true"},
-        {"speaker": "MCDM","id": "8Q8bVPpc84A", "complete": "true"}
+        {"speaker": "MCDM","id": "8Q8bVPpc84A", "complete": "true"}, 
+        {"speaker": "MCDM","id": "tNElIpHBgxU", "complete": "true"},
+        {"speaker": "MCDM","id": "Ja4y8xcihiw", "complete": "true"},
+        {"speaker": "MCDM","id": "_MZ6NKDsjhg", "complete": "true"},
+        {"speaker": "MCDM","id": "jPRJDgTkXMI", "complete": "true"}
     ]
 }
