At home changes added

--- a/wav_youtube/video_config.json
+++ b/wav_youtube/video_config.json
@@ -1,5 +1,6 @@
 {
     "videos": [
+        {"speaker": "MCDM","id": "LQsJSqn71Fw", "complete": "false"},
         {"speaker": "MCDM","id": "B15Sd0QiVzw", "complete": "true"},
         {"speaker": "MCDM","id": "e-YZvLUXcR8", "complete": "true"},
         {"speaker": "MCDM","id": "zTD2RZz6mlo", "complete": "true"},
