--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ wav_youtube/scripts/chopped
 flask/wavs
 /training_data/**/wavs
 wav_youtube/scripts/jabbervox-4f38518a0c72.json
+flask/outputs/**/*.wav
+/training_data/BKOB/wavs/
+/training_data/HLCL/wavs/
+/training_data/MCDM/wavs/
