--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.pth.tar filter=lfs diff=lfs merge=lfs -text
 flask/voices/BKOB/best_model.pth.tar filter=lfs diff=lfs merge=lfs -text
 flask/voices/HLCL/best_model.pth.tar filter=lfs diff=lfs merge=lfs -text
+flask/voices/LAFB/best_model.pth.tar filter=lfs diff=lfs merge=lfs -text
